# obstacle_detector

./: CMakeLists.txt  nodelet_plugins.xml  rviz_plugins.xml
include/obstacle_detector/: identity.h
launch/: demo.launch  nodelets.launch  nodes.launch
resources/: obstacle_detector.rviz
src/: identity.cpp  obstacle_extractor.cpp  obstacle_tracker.cpp  scans_merger.cpp
